[package]
name = "web_mmo"
version = "0.1.0"
authors = ["Yeonho Jang <siabard@gmail.com>"]

[dependencies]
rocket="0.3.6"
rocket_codegen="0.3.6"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
diesel = {version= "1.0.0", features=["mysql"]}
diesel_codegen = {version="*", features=["mysql"]}
r2d2="*"
r2d2-diesel="*"
dotenv = "0.10.*"
tera = "0.11"

[dependencies.rocket_contrib]
version="*"
default-features=false
features=["json", "handlebars_templates", "tera_templates"]